Auto reformat code and code cleanup